# Apispec-Oneof

./: .gitignore  README.md  development.ini  pyproject.toml
apispec_oneof/: __init__.py
apispec_oneof/api/: __init__.py  schemas.py  views.py
apispec_oneof/api/swagger/: __init__.py  apispecview.py  generator.py  renderers.py
